# nerraders-mc-mod-downloader

./: .gitignore  CHANGELOG.md  MC Mods Downloader.spec  README.md  pyproject.toml
data/: mods.json  test.json
src/: builder.py  constants.py  main.py
src/mc_mods_downloader/: builder.py  config.py  constants.py  main.py  storage.py
