[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mc_mods_downloader"
version = "3.0.0"
description = "A tool to help you download minecraft mods quickly and easily"
readme = "README.md"
# found using vermin package
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.1.1",
    "requests>=2.33.0",
    "rich>=14.3.3",
]
authors = [
    { name = "nerrader" }
]
license = { text = "GPL-3.0-or-later" }

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pyinstaller>=6.19.0",
    "radon>=6.0.1",
    "ruff>=0.15.7",
    "types-requests>=2.32.4.20260107",
    "vermin>=1.8.0",
    "vulture>=2.16",
]

[project.scripts]
mcdl = "mc_mods_downloader.main:main"
# stands for mc-downloader